added qr code and polymer

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-    </head>
-    <body>
-        Hello World
-    </body>
+<head>
+    <script>
+        import 'webcomponent-qr-code'
+    </script>
+</head>
+
+<body>
+    <qr-code data="hello world!"></qr-code>
+</body>
+
 </html>
